...
                                            <constraint firstAttribute="height" constant="40" id="Y2L-Ov-DRk"/>
                                        </constraints>
                                        <state key="normal" image="compass"/>
                                        <connections>
                                            <action selector="centerButtonTapped:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Hfb-Yp-oat"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Oswald-Bold" family="Oswald" pointSize="25"/>
                                <state key="normal" title="START"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                <rect key="frame" x="94.000000000000014" y="132.66666666666666" width="226.33333333333337" height="93.666666666666657"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CURRENT TIME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FjN-xo-P92">
                                        <rect key="frame" x="34.666666666666657" y="0.0" width="156.66666666666666" height="24.666666666666668"/>
                                        <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="20"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="tuY-9d-nAd">
                                        <rect key="frame" x="0.0" y="32.666666666666686" width="226.33333333333334" height="61"/>
                                        <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="50"/>
...
                                <rect key="frame" x="126.66666666666669" y="321.33333333333331" width="161" height="144.33333333333331"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVERAGE PACE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="aQq-sP-BO7">
                                        <rect key="frame" x="0.3333333333333286" y="0.0" width="160.33333333333337" height="24.666666666666668"/>
                                        <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="20"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PER MILE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Or3-oS-ooO">
                                        <rect key="frame" x="43.666666666666679" y="125.99999999999999" width="73.333333333333314" height="18.333333333333329"/>
                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="15"/>
...
                                <rect key="frame" x="134.33333333333337" y="560.66666666666663" width="145.66666666666663" height="120"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DISTANCE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="wF2-MY-u70">
                                        <rect key="frame" x="20.333333333333314" y="0.0" width="105" height="24.666666666666668"/>
                                        <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="20"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Wtg-da-cO3">
                                        <rect key="frame" x="0.0" y="32.666666666666742" width="145.66666666666666" height="61"/>
                                        <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="50"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MILES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Jpm-oP-DTC">
                                        <rect key="frame" x="49.333333333333314" y="101.66666666666674" width="47" height="18.333333333333329"/>
                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="15"/>
...
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" image="stop.fill" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
                                        </state>
...
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" image="pause.fill" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
                                        </state>
...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="PERFORMANCE" image="log" selectedImage="log" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="tableView" destination="mlV-mt-xb0" id="TJt-mp-Fqc"/>
...
